# scout-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: client.rs  error.rs  lib.rs  stream.rs
src/resources/: chat.rs  company.rs  extract.rs  jobs.rs  lists.rs  mod.rs  monitors.rs  page.rs  products.rs  search.rs  site.rs
tests/: integration.rs
