[package]
name = "scout-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Official Rust SDK for the Scout web-intelligence API"
homepage = "https://usescout.sh"
repository = "https://github.com/Scout-AI-Labs/scout-rust"
documentation = "https://docs.rs/scout-sdk"
readme = "README.md"
keywords = ["scout", "web-scraping", "search", "scrape", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
